# biocartis

./: .gitattributes  README.md  pyproject.toml  technical_exercise.ipynb
data/: trainingset.csv  validationset.csv
