[project]
name = "biocartis"
version = "0.1.0"
description = ""
authors = [
    {name = "Samme Vreysen",email = "samme@gorilla.co"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars (>=1.34.0,<2.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
    ipykernel = "^6.30.1"
    jupyterlab = "^4.4.9"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
isort = "^6.1.0"
flake8 = "^7.3.0"


[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88
py_version = 311
skip = [".venv", "build", "dist"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", "build", "dist", "__pycache__"]

